feat: add JWT admin authentication and GCP production deploy setup
- Spring Security + JWT (HS256) protecting all /api/admin/** endpoints
- AuthController with POST /api/auth/login and GET /api/auth/me
- Frontend: AdminLoginPage, ProtectedRoute, axios interceptors for Bearer token
- Admin dashboard now requires login; added logout button, removed TODO banner
- CORS origins now read from APP_CORS_ORIGINS env var (no longer hardcoded)
- Backend DB/admin credentials fully externalized via env vars
- Added: Caddyfile, docker-compose.prod.yml, .env.prod.example, deploy.sh
- Frontend Dockerfile accepts VITE_API_URL build arg for production API URL

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>